优化框架